sdk/opendp/whitenoise/sql/parser/SqlSmallParser.py
# Generated from SqlSmall.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SqlSmallParser ( Parser ):

    grammarFileName = "SqlSmall.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<=>'", "'<>'", "'!='", "'<'", "<INVALID>", "'>'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'~'", 
                     "'&'", "'|'", "'||'", "'^'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'/**/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ABS", "ACOS", "ALL", "AND", 
                      "ANTI", "AS", "ASC", "ASIN", "ATAN", "AVG", "BETWEEN", 
                      "BY", "CASE", "CEILING", "CHOOSE", "COS", "COT", "COUNT", 
                      "CROSS", "DEGREES", "DENSE_RANK", "DESC", "DISTINCT", 
                      "DIV", "ELSE", "END", "EXP", "FALSE", "FLOOR", "FROM", 
                      "FULL", "GROUP", "HAVING", "IF", "IIF", "IN", "INNER", 
                      "INTERSECT", "IS", "JOIN", "LEFT", "LIMIT", "LOG", 
                      "LOG10", "MAX", "MIN", "NEWID", "NOT", "NULL", "NUMERIC", 
                      "ON", "OR", "ORDER", "OUTER", "OVER", "PARTITION", 
                      "PERCENTILE_CONT", "PERCENTILE_DISC", "PI", "POWER", 
                      "RAND", "RANDOM", "RANK", "RIGHT", "ROUND", "ROW_NUMBER", 
                      "ROWNUM", "SELECT", "SEMI", "SIGN", "SIN", "SORT", 
                      "SQL", "SQRT", "SQUARE", "STD", "STDDEV", "SUM", "TAN", 
                      "THEN", "TOP", "TRUE", "UNION", "USING", "VAR", "VARIANCE", 
                      "WHEN", "WHERE", "EQ", "NSEQ", "NEQ", "NEQJ", "LT", 
                      "LTE", "GT", "GTE", "PLUS", "MINUS", "ASTERISK", "SLASH", 
                      "PERCENT", "TILDE", "AMPERSAND", "PIPE", "CONCAT_PIPE", 
                      "HAT", "STRING", "INTEGER_VALUE", "DECIMAL_VALUE", 
                      "QN2", "QN3", "IDENT", "IDENTIFIER", "ESCAPED_IDENTIFIER", 
                      "LETTER", "SIMPLE_COMMENT", "BRACKETED_EMPTY_COMMENT", 
                      "BRACKETED_COMMENT", "WS", "SPACE" ]

    RULE_batch = 0
    RULE_query = 1
    RULE_subquery = 2
    RULE_expressionSubquery = 3
    RULE_selectClause = 4
    RULE_fromClause = 5
    RULE_whereClause = 6
    RULE_aggregationClause = 7
    RULE_havingClause = 8
    RULE_orderClause = 9
    RULE_limitClause = 10
    RULE_topClause = 11
    RULE_joinRelation = 12
    RULE_joinType = 13
    RULE_joinCriteria = 14
    RULE_sortItem = 15
    RULE_setQuantifier = 16
    RULE_relation = 17
    RULE_relationPrimary = 18
    RULE_caseExpression = 19
    RULE_namedExpression = 20
    RULE_namedExpressionSeq = 21
    RULE_whenExpression = 22
    RULE_expression = 23
    RULE_allExpression = 24
    RULE_literal = 25
    RULE_booleanExpression = 26
    RULE_predicate = 27
    RULE_comparisonOperator = 28
    RULE_booleanValue = 29
    RULE_functionExpression = 30
    RULE_bareFunction = 31
    RULE_rankingFunction = 32
    RULE_roundFunction = 33
    RULE_powerFunction = 34
    RULE_rankingFunctionName = 35
    RULE_aggregateFunctionName = 36
    RULE_mathFunctionName = 37
    RULE_bareFunctionName = 38
    RULE_overClause = 39
    RULE_aliasedSubquery = 40
    RULE_aliasedTableOrSubquerySeq = 41
    RULE_aliasedTableSeq = 42
    RULE_aliasedTableName = 43
    RULE_qualifiedTableName = 44
    RULE_qualifiedColumnName = 45
    RULE_identifier = 46
    RULE_number = 47

    ruleNames =  [ "batch", "query", "subquery", "expressionSubquery", "selectClause", 
                   "fromClause", "whereClause", "aggregationClause", "havingClause", 
                   "orderClause", "limitClause", "topClause", "joinRelation", 
                   "joinType", "joinCriteria", "sortItem", "setQuantifier", 
                   "relation", "relationPrimary", "caseExpression", "namedExpression", 
                   "namedExpressionSeq", "whenExpression", "expression", 
                   "allExpression", "literal", "booleanExpression", "predicate", 
                   "comparisonOperator", "booleanValue", "functionExpression", 
                   "bareFunction", "rankingFunction", "roundFunction", "powerFunction", 
                   "rankingFunctionName", "aggregateFunctionName", "mathFunctionName", 
                   "bareFunctionName", "overClause", "aliasedSubquery", 
                   "aliasedTableOrSubquerySeq", "aliasedTableSeq", "aliasedTableName", 
                   "qualifiedTableName", "qualifiedColumnName", "identifier", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    ABS=6
    ACOS=7
    ALL=8
    AND=9
    ANTI=10
    AS=11
    ASC=12
    ASIN=13
    ATAN=14
    AVG=15
    BETWEEN=16
    BY=17
    CASE=18
    CEILING=19
    CHOOSE=20
    COS=21
    COT=22
    COUNT=23
    CROSS=24
    DEGREES=25
    DENSE_RANK=26
    DESC=27
    DISTINCT=28
    DIV=29
    ELSE=30
    END=31
    EXP=32
    FALSE=33
    FLOOR=34
    FROM=35
    FULL=36
    GROUP=37
    HAVING=38
    IF=39
    IIF=40
    IN=41
    INNER=42
    INTERSECT=43
    IS=44
    JOIN=45
    LEFT=46
    LIMIT=47
    LOG=48
    LOG10=49
    MAX=50
    MIN=51
    NEWID=52
    NOT=53
    NULL=54
    NUMERIC=55
    ON=56
    OR=57
    ORDER=58
    OUTER=59
    OVER=60
    PARTITION=61
    PERCENTILE_CONT=62
    PERCENTILE_DISC=63
    PI=64
    POWER=65
    RAND=66
    RANDOM=67
    RANK=68
    RIGHT=69
    ROUND=70
    ROW_NUMBER=71
    ROWNUM=72
    SELECT=73
    SEMI=74
    SIGN=75
    SIN=76
    SORT=77
    SQL=78
    SQRT=79
    SQUARE=80
    STD=81
    STDDEV=82
    SUM=83
    TAN=84
    THEN=85
    TOP=86
    TRUE=87
    UNION=88
    USING=89
    VAR=90
    VARIANCE=91
    WHEN=92
    WHERE=93
    EQ=94
    NSEQ=95
    NEQ=96
    NEQJ=97
    LT=98
    LTE=99
    GT=100
    GTE=101
    PLUS=102
    MINUS=103
    ASTERISK=104
    SLASH=105
    PERCENT=106
    TILDE=107
    AMPERSAND=108
    PIPE=109
    CONCAT_PIPE=110
    HAT=111
    STRING=112
    INTEGER_VALUE=113
    DECIMAL_VALUE=114
    QN2=115
    QN3=116
    IDENT=117
    IDENTIFIER=118
    ESCAPED_IDENTIFIER=119
    LETTER=120
    SIMPLE_COMMENT=121
    BRACKETED_EMPTY_COMMENT=122
    BRACKETED_COMMENT=123
    WS=124
    SPACE=125

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BatchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlSmallParser.QueryContext)
            else:
                return self.getTypedRuleContext(SqlSmallParser.QueryContext,i)


        def EOF(self):
            return self.getToken(SqlSmallParser.EOF, 0)

        def getRuleIndex(self):
            return SqlSmallParser.RULE_batch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBatch" ):
                listener.enterBatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBatch" ):
                listener.exitBatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBatch" ):
                return visitor.visitBatch(self)
            else:
                return visitor.visitChildren(self)




    def batch(self):

        localctx = SqlSmallParser.BatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_batch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.query()
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 97
                    self.match(SqlSmallParser.T__0)
                    self.state = 98
                    self.query() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.T__0:
                self.state = 104
                self.match(SqlSmallParser.T__0)


            self.state = 107
            self.match(SqlSmallParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectClause(self):
            return self.getTypedRuleContext(SqlSmallParser.SelectClauseContext,0)


        def fromClause(self):
            return self.getTypedRuleContext(SqlSmallParser.FromClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SqlSmallParser.WhereClauseContext,0)


        def aggregationClause(self):
            return self.getTypedRuleContext(SqlSmallParser.AggregationClauseContext,0)


        def havingClause(self):
            return self.getTypedRuleContext(SqlSmallParser.HavingClauseContext,0)


        def orderClause(self):
            return self.getTypedRuleContext(SqlSmallParser.OrderClauseContext,0)


        def limitClause(self):
            return self.getTypedRuleContext(SqlSmallParser.LimitClauseContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = SqlSmallParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.selectClause()
            self.state = 110
            self.fromClause()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.WHERE:
                self.state = 111
                self.whereClause()


            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.GROUP:
                self.state = 114
                self.aggregationClause()


            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.HAVING:
                self.state = 117
                self.havingClause()


            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ORDER:
                self.state = 120
                self.orderClause()


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.LIMIT:
                self.state = 123
                self.limitClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubqueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectClause(self):
            return self.getTypedRuleContext(SqlSmallParser.SelectClauseContext,0)


        def fromClause(self):
            return self.getTypedRuleContext(SqlSmallParser.FromClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SqlSmallParser.WhereClauseContext,0)


        def aggregationClause(self):
            return self.getTypedRuleContext(SqlSmallParser.AggregationClauseContext,0)


        def havingClause(self):
            return self.getTypedRuleContext(SqlSmallParser.HavingClauseContext,0)


        def orderClause(self):
            return self.getTypedRuleContext(SqlSmallParser.OrderClauseContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_subquery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubquery" ):
                listener.enterSubquery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubquery" ):
                listener.exitSubquery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubquery" ):
                return visitor.visitSubquery(self)
            else:
                return visitor.visitChildren(self)




    def subquery(self):

        localctx = SqlSmallParser.SubqueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_subquery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(SqlSmallParser.T__1)
            self.state = 127
            self.selectClause()
            self.state = 128
            self.fromClause()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.WHERE:
                self.state = 129
                self.whereClause()


            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.GROUP:
                self.state = 132
                self.aggregationClause()


            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.HAVING:
                self.state = 135
                self.havingClause()


            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ORDER:
                self.state = 138
                self.orderClause()


            self.state = 141
            self.match(SqlSmallParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionSubqueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subquery(self):
            return self.getTypedRuleContext(SqlSmallParser.SubqueryContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_expressionSubquery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionSubquery" ):
                listener.enterExpressionSubquery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionSubquery" ):
                listener.exitExpressionSubquery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionSubquery" ):
                return visitor.visitExpressionSubquery(self)
            else:
                return visitor.visitChildren(self)




    def expressionSubquery(self):

        localctx = SqlSmallParser.ExpressionSubqueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressionSubquery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.subquery()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SqlSmallParser.SELECT, 0)

        def namedExpressionSeq(self):
            return self.getTypedRuleContext(SqlSmallParser.NamedExpressionSeqContext,0)


        def setQuantifier(self):
            return self.getTypedRuleContext(SqlSmallParser.SetQuantifierContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_selectClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectClause" ):
                listener.enterSelectClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectClause" ):
                listener.exitSelectClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectClause" ):
                return visitor.visitSelectClause(self)
            else:
                return visitor.visitChildren(self)




    def selectClause(self):

        localctx = SqlSmallParser.SelectClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_selectClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(SqlSmallParser.SELECT)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ALL or _la==SqlSmallParser.DISTINCT or _la==SqlSmallParser.TOP:
                self.state = 146
                self.setQuantifier()


            self.state = 149
            self.namedExpressionSeq()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(SqlSmallParser.FROM, 0)

        def relation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlSmallParser.RelationContext)
            else:
                return self.getTypedRuleContext(SqlSmallParser.RelationContext,i)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_fromClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromClause" ):
                listener.enterFromClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromClause" ):
                listener.exitFromClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromClause" ):
                return visitor.visitFromClause(self)
            else:
                return visitor.visitChildren(self)




    def fromClause(self):

        localctx = SqlSmallParser.FromClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fromClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(SqlSmallParser.FROM)
            self.state = 152
            self.relation()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SqlSmallParser.T__3:
                self.state = 153
                self.match(SqlSmallParser.T__3)
                self.state = 154
                self.relation()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(SqlSmallParser.WHERE, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(SqlSmallParser.BooleanExpressionContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)
